--- a/Lmall/src/main/resources/templates/Lmall/detail.html
+++ b/Lmall/src/main/resources/templates/Lmall/detail.html
@@ -17,11 +17,11 @@
             <span class="goods_intro" th:text="${goodsDetail.goodsIntro}">Lmall</span>
         </div>
         <div class="goods_info_main">
-            <div class="detail_ticket">
-                <img th:src="@{/Lmall/img/lmall-detail-ticket.png}">
-                <span>全楼楼商城商品通用</span>
-                <a href="#">去刮券<img th:src="@{/Lmall/img/right.png}"></a>
-            </div>
+<!--            <div class="detail_ticket">-->
+<!--                <img th:src="@{/Lmall/img/lmall-detail-ticket.png}">-->
+<!--                <span>全楼楼商城商品通用</span>-->
+<!--                <a href="#">去刮券<img th:src="@{/Lmall/img/right.png}"></a>-->
+<!--            </div>-->
             <dl class="goods_price_panel">
                 <dt>原价</dt>
                 <dd><em>¥</em><span><th:block th:text="${goodsDetail.originalPrice}+'.00 元'"></th:block></span></dd>
